[gd_scene load_steps=6 format=3 uid="uid://bql5sllykr0vb"]

[ext_resource type="Script" path="res://Scripts/death_screen.gd" id="1_2p3un"]
[ext_resource type="Texture2D" uid="uid://b7glfyygbann7" path="res://Images/Space/Nebula Aqua-Pink.png" id="1_w8vrh"]
[ext_resource type="Texture2D" uid="uid://b5ndnpb8hobym" path="res://Images/Space/Stars Small_2.png" id="2_xi044"]
[ext_resource type="FontFile" uid="uid://cokywuyj4ehib" path="res://Fonts/Montserrat-Medium.otf" id="3_62wmp"]
[ext_resource type="Theme" uid="uid://dj2vxmvc7a34e" path="res://theme/ui.theme" id="5_6s0ar"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2p3un")

[node name="Space" type="Sprite2D" parent="."]
position = Vector2(583.073, 569.073)
scale = Vector2(0.294398, 0.294398)
texture = ExtResource("1_w8vrh")

[node name="Stars" type="Sprite2D" parent="."]
position = Vector2(568, 540)
scale = Vector2(0.293579, 0.293579)
texture = ExtResource("2_xi044")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 649.0

[node name="YouDied" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -164.0
offset_right = 195.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_62wmp")
theme_override_font_sizes/font_size = 80
text = "You Died!"

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -55.0
offset_right = 71.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_62wmp")
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="Retry" type="Button" parent="."]
layout_mode = 2
offset_left = 460.0
offset_top = 344.0
offset_right = 690.0
offset_bottom = 404.0
theme = ExtResource("5_6s0ar")
theme_override_fonts/font = ExtResource("3_62wmp")
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 2
offset_left = 460.0
offset_top = 416.0
offset_right = 690.0
offset_bottom = 476.0
theme = ExtResource("5_6s0ar")
theme_override_fonts/font = ExtResource("3_62wmp")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="QuitGame" type="Button" parent="."]
layout_mode = 2
offset_left = 460.0
offset_top = 487.0
offset_right = 690.0
offset_bottom = 547.0
theme = ExtResource("5_6s0ar")
theme_override_fonts/font = ExtResource("3_62wmp")
theme_override_font_sizes/font_size = 30
text = "Quit Game"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_game_pressed"]
